--- a/SOSD/index.html
+++ b/SOSD/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACM服务外包协同创新团队首页</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <div class="logo">
                 <img src="logo/logo.png" alt="logo">
             </div>
-            <div><a href="#" class="office">福州大学服务外包与软件设计办公室</a></div>
+            <div class="office">福州大学服务外包与软件设计办公室</div>
         </div>
         <div class="header-right">
             <div class="nav">
@@ -161,8 +162,29 @@
                             <img src="title.png" alt="" class="imgs">
                         </div>
                     </div>
-                    <div class="contents">
-                        <img src="index/人.jpg" alt="" class="people">
+                    <div class="contents-focus">
+
+                        <a href="javascript:;" class="arrow-l">
+                                &lt;
+                            </a>
+
+                        <a href="javascript:;" class="arrow-r">
+                                &gt;
+                            </a>
+                        <ul>
+                            <li>
+                                <a href="#"><img src="index/人.jpg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="index/2.jpg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="index/3.jpg" alt=""></a>
+                            </li>
+                        </ul>
+                        <ol class="circle">
+                        </ol>
+
                     </div>
                 </div>
                 <div class="footer">
@@ -209,6 +231,8 @@
                     </div>
                 </div>
             </div>
+            <script src="animate.js"></script>
+            <script src="index.js"></script>
 </body>
 
 </html>
